Bug 834127 - Make Plugin Hang UI dialog unowned. r=bsmedberg